# camera_stitching

./: CMakeLists.txt
calibration/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  stitching_calibration.cpp  stitching_calibration.hpp
python/image/: 1_optical_center_correction.py  2_remove_black.py  calculate_stitching_fov.py  camera_stitching.py  find_corner_points.py  generate_black_white_chart.py  generate_stitching_matrix.py  image_3d_rotation.py  image_transformer.py  test.py  test1.py  translate_img_optical_center.py
python/video/: 0_decoding_video.py  1_rotate_video_frame.py  2_concatenate_video.py  3_image_3d_rotate.py  4_remove_black.py  5_generate_matrix.py  6_encoding_video.py  7_encoding_input_video.py  common.py  data1_common.py  data3_common.py  image_transformer.py  stitching_detailed.py  test.py  test_graphcut.py  video_common.py
stitching/: CMakeLists.txt  Makefile  cmake_install.cmake  stitching.cpp
